# RPBox

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PRD1-项目介绍.md  PRD2-人物卡备份同步.md  PRD3-1-RP数据库.md  PRD3-剧情记录归档.md  PRD4-社区分享交流.md  PRD5-道具市场.md  PRD6-配套WoW插件.md  README.md  RPBox成本分析-云服务商对比.csv  RPBox成本分析-优化建议.csv  RPBox成本分析-关键指标监控.csv  RPBox成本分析-总表.csv  RPBox成本分析-成本驱动因素.csv  RPBox成本分析-数据存储估算.csv  RPBox成本分析-月度预算规划.csv  RPBox成本分析-用户增长与成本.csv  RPBox成本分析-详细配置.csv  RPBox成本分析-风险预警.csv  RPBox报价表-供应商选择建议.csv  RPBox报价表-关键决策点.csv  RPBox报价表-实施路线图.csv  RPBox报价表-快速参考.csv  RPBox报价表-成本优化方案.csv  RPBox报价表-日活50-150用户.csv  RPBox报价表-月度成本预测.csv  RPRecorder.lua  TASK_LIST.md  dev.bat  dev.ps1  limitDevice.lua  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  se_todolist.md  采购单_Sealos云服务器.csv  (+2 more)
.memories/: README.md
addon/: LICENSE
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/addon_installer/: installer.rs  mod.rs
client/src-tauri/src/chat_log/: parser.rs
client/src-tauri/src/lua_parser/: error.rs  lexer.rs  mod.rs  parser.rs  tests.rs
client/src-tauri/src/scanner/: scanner.rs
client/src-tauri/src/sync_meta/: storage.rs
client/src-tauri/src/wow_path/: detection.rs
client/src-tauri/src/writer/: lua_writer.rs  mod.rs
docs/: client-release.md  level-badge-gradient-preview.html  mobile-development-plan.md  mobile-release.md  (+5 more)
(+550 files in other folders)
